--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: shelf_paginate
 description: Page a json file.
 version: 1.0.0
+homepage: https://github.com/jhecksonSa/shelf_paginate
 
 environment:
   sdk: '>=2.17.1 <3.0.0'
